--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "coinbase-commerce-node": "^1.0.4",
         "discord.js": "^13.5.0",
         "dotenv": "^10.0.0",
+        "express": "^4.18.1",
         "fs": "^0.0.1-security",
         "glob": "^7.2.0",
         "oldschooljs": "^2.1.58",
