Hopefully got automated delivery system setup

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "description": "",
     "dependencies": {
         "@sendgrid/mail": "^7.7.0",
+        "axios": "^1.2.2",
         "coinbase-commerce-node": "^1.0.4",
         "discord.js": "^14.7.1",
         "dotenv": "^10.0.0",
