--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
         "@sendgrid/mail": "^7.7.0",
         "axios": "^1.2.2",
         "coinbase-commerce-node": "^1.0.4",
+        "cron": "^2.1.0",
         "discord.js": "^14.7.1",
         "dotenv": "^10.0.0",
         "express": "^4.18.1",
         "fs": "^0.0.1-security",
         "glob": "^7.2.0",
+        "mongoose": "^6.8.3",
         "node-fetch": "^2.6.7",
         "oldschooljs": "^2.1.58",
         "prettier": "^2.7.1"
