Started doing more on mongo rw

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-botToken=OTI2OTgzMDQ4MTA3NTU2ODg0.G9OZBj.coQ8b16Kzlyz2L2PvWoxdZetpvfwYSIpv67rXk
-guildId=997579967539974154
+botToken=OTQyODk3NDczNDY1MjIxMTQw.YgrLsw.fSGl_-azSX-2pI6JsBh2podZCmA
+guildId=724996664389271633
 channelId=1035386946610004040
 db=mongodb+srv://ian:Quakers02@cluster0.yatjd.mongodb.net/chimp?authSource=admin&replicaSet=atlas-nm7ndx-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true
